src/test/deca/syntax/invalid/manque_op_div.deca
// Il manque l'opérande div

// Date: 20.01.2022

{
int a = /2;
}